fix message spacing

--- a/src/components/MessagePreview/MessagePreview.css
+++ b/src/components/MessagePreview/MessagePreview.css
@@ -17,6 +17,7 @@ a {
 }
 
 .details > p {
+  padding-top: 15px:
   color: white;
 }
 
@@ -27,3 +28,4 @@ a {
 .profile-pic {
   margin-right: 20px;
 }
+r
